--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -3,4 +3,16 @@
 {% block title %}Index
 {% endblock %}
 
-{% block body %}{% endblock %}
+{% block body %}
+	<div class="container">
+		<div class="row text-center">
+			<form>
+				<div class="mb-3">
+					<label for="exampleInputEmail1" class="form-label">Research</label>
+					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+				</div>
+				<button type="submit" class="btn btn-primary">Submit</button>
+			</form>
+		</div>
+	</div>
+{% endblock %}
