--- a/templates/app/results.html.twig
+++ b/templates/app/results.html.twig
@@ -4,7 +4,14 @@
 {% endblock %}
 
 {% block body %}
-	{% for key, companie in companies %}
-		{{ dump(companie) }}
-	{% endfor %}
+	<div class="container">
+		<div class="h2">{{ header }}</div>
+		{% for key, companie in companies %}
+			<div class="results-{{ key }}">
+				{{ dump(companie) }}
+			</div>
+		{% endfor %}
+		<a type="button" href={{ path('app_results', {city: search['city'], sector: search['sector'], page: search['page'] - 1 } ) }}>Page précédente</a>
+		<a type="button" href={{ path('app_results', {city: search['city'], sector: search['sector'], page: search['page'] + 1 } ) }}>Page suivante</a>
+	</div>
 {% endblock %}
